--- a/src/NavBar/Navbar.css
+++ b/src/NavBar/Navbar.css
@@ -2,9 +2,10 @@
     position: sticky;
     top: 0;left: 0;
     width: 100%;
-    height: 60px;
+    height: auto;
     background-color: white;
     display: flex;
+   flex-wrap: wrap;
   
   
     
@@ -71,6 +72,25 @@
     transform: translateX(-50%);
     top: 1rem;
   }
+  .profile{
+    font-size: 2rem;
+  color: grey;
+  cursor: pointer;
+  margin-left: 40rem;
+  position: absolute;
+  margin-top: .2rem;
+  font-size: 2.4rem;
+  top: 60%;
+  right: 4rem;
+  transform: translateY(-50%);
+
+
+ 
+   
+    
+  
+  }
+  
   li{
     margin-left: 2rem;
   }
@@ -96,10 +116,12 @@
   
   @media (max-width: 982px) {
     .search{
-        top: 8rem;
+        top: 10rem;
+        
         display: flex;
         justify-content: center;
         
+ 
        
       
       
@@ -129,13 +151,34 @@
       .navbar {
        
         width: 100%;
-        height: 60px;
+        height: 250px;
         background-color: white;
         display: flex;
         justify-content: center;
 
       
       
+        
+      
+      }
+      .profile{
+        font-size: 2rem;
+      color: grey;
+      cursor: pointer;
+      margin-left: 40rem;
+    
+      margin-top: 5rem;
+      
+      font-size: 2.4rem;
+      right: 17rem;
+      transform: translateY(-50%);
+     
+      
+      
+     
+    
+     
+       
         
       
       }
