--- a/src/NavBar/Navbar.css
+++ b/src/NavBar/Navbar.css
@@ -2,7 +2,7 @@
     position: sticky;
     top: 0;left: 0;
     width: 100%;
-    height: auto;
+    height: 60px;
     background-color: white;
     display: flex;
    flex-wrap: wrap;
@@ -172,8 +172,7 @@
       font-size: 2.4rem;
       right: 17rem;
       transform: translateY(-50%);
-     
-      
+
       
      
     
