--- a/src/Footerimage/Footerimage.css
+++ b/src/Footerimage/Footerimage.css
@@ -15,6 +15,7 @@
   text-align: center;
   
   
+  
 }
 .text-4{
     margin-top: 3rem;
@@ -58,7 +59,8 @@
 }
 .image1{
     height: 30rem;
-    
+    width: 90%;
+    object-fit: cover;
   
     margin-top: 3rem;
     
@@ -82,7 +84,8 @@
     }
     .image1{
         height: 35rem;
-        width: 100%;
+        
+        margin-left: 2rem;
       
         margin-top: 3rem;
     
@@ -103,4 +106,33 @@
     .le-head{
         color:#1e3932 ;
     }
+    .learn-head{
+        background-color: rgb(207, 207, 207);
+        margin-top: 3rem;
+        margin-left: 1rem;
+    }
+
+}
+@media (max-width: 320px){
+    .learn-head{
+        margin-left: 20%;
+        width: 100%;
+        
+    }
+
+}
+@media (max-width: 400px){
+    .learn-head{
+        margin-left: 10%;
+        width: 100%;
+        
+    }
+    .image1{
+        
+        margin-left: 1rem;
+      
+        margin-top: 2rem;
+    
+    }
+
 }
