footer image size currected

--- a/src/Footerimage/Footerimage.css
+++ b/src/Footerimage/Footerimage.css
@@ -59,10 +59,11 @@
 }
 .image1{
     height: 30rem;
-    width: 90%;
+    width: 100%;
     object-fit: cover;
   
     margin-top: 3rem;
+    margin-left: rem;
     
 
 }
@@ -85,7 +86,7 @@
     .image1{
         height: 35rem;
         
-        margin-left: 2rem;
+        margin-left: rem;
       
         margin-top: 3rem;
     
@@ -123,13 +124,14 @@
 }
 @media (max-width: 400px){
     .learn-head{
-        margin-left: 10%;
+        margin-left: 20%;
         width: 100%;
         
     }
     .image1{
         
-        margin-left: 1rem;
+        
+        width: 100%;
       
         margin-top: 2rem;
     
