--- a/src/Cards/Cards.css
+++ b/src/Cards/Cards.css
@@ -197,20 +197,13 @@ margin-top: 1rem;
       margin-top: 2rem;
       margin-left: 2rem;
     }
-    .latestoffers{
-      margin-left: 15%;
+    .offer-title{
+      margin-left: 2rem;
     }
-    .latestoffers1{
-      margin-left: 15%;
-    }
+   
 
   }
   @media (max-width: 320px){
-    .latestoffers{
-      margin-left: 12%;
-    }
-    .latestoffers1{
-      margin-left: 12%;
-    }
+  
 
   }
