--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -97,9 +97,9 @@ justify-content: space-between;
 }
 @media (max-width:400px){
     .footer{
-        margin-left: 1%;
+        margin-left: 2px;
         margin-top: 2rem;
-        width: 480px;
+        width: 100%;
         
     }
 
@@ -109,13 +109,14 @@ justify-content: space-between;
         display: flex;
         flex-wrap: wrap;
     
-        width: 100%;
+        width: 99%;
         height: auto;
         background-color: #1e3932;
         color: white;
         font-family: SoDoSans_Semibold,Helvetica,sans-serif ;
         margin-left: .5rem;
-        margin-left: 15%;
+        margin-left: 5%;
+        overflow: hidden;
         
        
     }
