--- a/src/Footerimage/Footerimage.css
+++ b/src/Footerimage/Footerimage.css
@@ -110,13 +110,13 @@
     .learn-head{
         background-color: rgb(207, 207, 207);
         margin-top: 3rem;
-        margin-left: 1rem;
+        margin-left: 5px;
     }
 
 }
 @media (max-width: 320px){
     .learn-head{
-        margin-left: 20%;
+        margin-left: 5%;
         width: 100%;
         
     }
@@ -124,14 +124,14 @@
 }
 @media (max-width: 400px){
     .learn-head{
-        margin-left: 20%;
+        
         width: 100%;
         
     }
     .image1{
         
-        
-        width: 100%;
+        margin-left: 15px;
+        width: 90%;
       
         margin-top: 2rem;
     
