--- a/src/Slide/Slide.css
+++ b/src/Slide/Slide.css
@@ -79,7 +79,7 @@ margin-left: 2rem;
   .container1{
     display: flex;
     justify-content: center;
-    margin-right: 2rem;
+    margin-right: 3rem;
   }
 
 }
@@ -110,13 +110,15 @@ margin-left: 2rem;
     
   }
   .slider{
-    margin-left: 50%;
+    margin-left: 20%;
   }
   
 
 }
 @media (max-width: 320px){
   .slider{
-    margin-left: 50%;
+    margin-left: 5rem;
+  
   }
+  
 }
