--- a/src/Footerimage/Footerimage.css
+++ b/src/Footerimage/Footerimage.css
@@ -125,7 +125,8 @@
 @media (max-width: 400px){
     .learn-head{
         
-        width: 100%;
+        width: 90%;
+        margin-left: 1rem;
         
     }
     .image1{
